--- a/src/app/view/sidebar/sidebar.component.html
+++ b/src/app/view/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Apollo Group | Academia Deportiva</title>
+  <title>New Vision | Óptica</title>
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -14,6 +14,10 @@
   <link rel="stylesheet" href="./../../../assets/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="./../../../assets/adminlte/dist/css/adminlte.min.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Edu+QLD+Hand:wght@400..700&family=Kapakana:wght@300..400&display=swap" rel="stylesheet">
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -65,9 +69,9 @@
     <aside class="main-sidebar main-sidebar-custom sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
       <a href="#" class="brand-link">
-        <img src="./../../assets/apolloLogo.png" alt="Apollo Group Logo" class="brand-image img-circle elevation-3"
-          style="opacity: .8">
-        <span class="brand-text font-weight-bold">Apollo Group</span>
+        <!--<img src="./../../assets/logo/logo_1.png" alt="New Vision Logo" class="brand-image img-circle elevation-3"
+          style="opacity: .8">-->
+        <span class="brand-text font-weight-bold">New Vision</span>
       </a>
 
       <!-- Sidebar -->
@@ -133,7 +137,7 @@
 
       <div class="sidebar-custom">
         <a data-bs-toggle="modal" data-bs-target="#logoutModal" class="btn btn-secondary hide-on-collapse pos-right"
-          style="background-color: var(--primary-color); color: #000000;">Cerrar sesión</a>
+          style="background-color: var(--details-color); color: black; font-weight: lighter;">Cerrar sesión</a>
       </div>
 
     </aside>
